ticketing-app/infra/k8/expiration-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: expiration-depl
spec:
    replicas: 1
    selector:
        matchLabels:
            app: expiration
    template:
        metadata:
            labels:
                app: expiration
        spec:
            containers:
                - name: expiration
                  image: mistryakshar54/ticketing-expiration
